--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               class="arin-logo"
               alt="Logo of Project Arin"
             />
-            <a href="play.html" id="play-btn" class="btn btn-bordered" target="_blank"
+            <a href="./play.html" id="play-btn" class="btn btn-bordered" target="_blank"
               >Launch Teaser</a
             >
             <a id="puzzle-btn" class="btn btn-bordered">Puzzles</a>
