--- a/play.html
+++ b/play.html
@@ -31,7 +31,7 @@
     <section id="game" class="playcontainer">
       <div class="gamecontainer">
         <iframe
-          src="aboutgame/game/index.html"
+          src="./game/index.html"
           name="Game"
           width="1000"
           height="584"
@@ -42,7 +42,7 @@
           <p>Your browser does not support iframes.</p>
         </iframe>
         <div class="button-container">
-          <a href="feedback.html" class="button1">Feedback</a>
+          <a href="./feedback.html" class="button1">Feedback</a>
         </div>
       </div>
     </section>
